// Vitest Snapshot v1

exports[`TabellVisning > rendrer riktig formatert tabell med detaljer 1`] = `
<DocumentFragment>
  <div
    class="navds-read-more navds-read-more--medium _readMore_c27af0"
  >
    <button
      aria-expanded="false"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Vis tabell
      </span>
    </button>
    <div
      aria-hidden="true"
      class="navds-read-more__content navds-read-more__content--closed navds-body-long"
    >
      <table
        class="navds-table navds-table--medium _table_c27af0"
      >
        <thead
          class="navds-table__header"
        >
          <tr
            class="navds-table__row navds-table__row--shade-on-hover"
          >
            <th
              class="navds-table__header-cell navds-label"
            />
            <th
              class="navds-table__header-cell navds-label"
              scope="col"
            >
              Alder
            </th>
            <th
              class="navds-table__header-cell navds-label _rightAligned_c27af0"
              scope="col"
            >
              Sum (kr)
            </th>
          </tr>
        </thead>
        <tbody
          class="navds-table__body"
        >
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r1"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r2"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r2"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              70
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              480 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r1"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Inntekt (lønn m.m.)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        100 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        350 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r3"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r4"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r4"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              71
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              605 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r3"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Inntekt (lønn m.m.)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        175 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r5"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r6"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r6"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              72
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r5"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r7"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r8"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r8"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              73
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r7"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r9"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-ra"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-ra"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              74
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r9"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="rb"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-rc"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-rc"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              75
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="rb"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="rd"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-re"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-re"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              76
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="rd"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="rf"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-rg"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-rg"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              77+
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="rf"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TabellVisning > rendrer riktig formatert tabell med detaljer 2`] = `
<DocumentFragment>
  <div
    class="navds-read-more navds-read-more--medium _readMore_c27af0 navds-read-more--open"
  >
    <button
      aria-expanded="true"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Lukk tabell
      </span>
    </button>
    <div
      aria-hidden="false"
      class="navds-read-more__content navds-body-long"
    >
      <table
        class="navds-table navds-table--medium _table_c27af0"
      >
        <thead
          class="navds-table__header"
        >
          <tr
            class="navds-table__row navds-table__row--shade-on-hover"
          >
            <th
              class="navds-table__header-cell navds-label"
            />
            <th
              class="navds-table__header-cell navds-label"
              scope="col"
            >
              Alder
            </th>
            <th
              class="navds-table__header-cell navds-label _rightAligned_c27af0"
              scope="col"
            >
              Sum (kr)
            </th>
          </tr>
        </thead>
        <tbody
          class="navds-table__body"
        >
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__expandable-row--open navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-table__toggle-expand-cell--open navds-body-short"
            >
              <button
                aria-controls="r1"
                aria-expanded="true"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r2"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r2"
                  >
                    Vis mindre
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              70
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              480 000
            </td>
          </tr>
          <tr
            aria-hidden="false"
            class="navds-table__expanded-row"
            id="r1"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
              >
                <div
                  aria-hidden="false"
                  class="navds-table__expanded-row-content"
                  style=""
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Inntekt (lønn m.m.)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        100 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        350 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r3"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r4"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r4"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              71
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              605 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r3"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Inntekt (lønn m.m.)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        175 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r5"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r6"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r6"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              72
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r5"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r7"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-r8"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r8"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              73
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r7"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="r9"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-ra"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-ra"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              74
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="r9"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="rb"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-rc"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-rc"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              75
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="rb"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="rd"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-re"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-re"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              76
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="rd"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
          >
            <td
              class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
            >
              <button
                aria-controls="rf"
                aria-expanded="false"
                class="navds-table__toggle-expand-button"
                type="button"
              >
                <svg
                  aria-labelledby="title-rg"
                  class="navds-table__expandable-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-rg"
                  >
                    Vis mer
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
            <td
              class="navds-table__data-cell navds-body-short"
            >
              77+
            </td>
            <td
              class="navds-table__data-cell _rightAligned_c27af0 navds-body-short"
            >
              430 000
            </td>
          </tr>
          <tr
            aria-hidden="true"
            class="navds-table__expanded-row"
            id="rf"
          >
            <td
              class="navds-table__expanded-row-cell"
              colspan="999"
            >
              <div
                class="navds-table__expanded-row-collapse"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  aria-hidden="true"
                  class="navds-table__expanded-row-content"
                  style="display: none;"
                >
                  <ul
                    class="_details_d23839"
                  >
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Avtalefestet pensjon (AFP)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        30 000
                      </p>
                    </li>
                    <li>
                      <p
                        class="navds-body-short"
                      >
                        Alderspensjon (NAV)
                      </p>
                      <p
                        class="navds-body-short"
                      >
                        400 000
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
